# ruffly-all

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish-python.yml  publish-rust.yml  rust.yml
src/: linter.rs  main.rs  ruff_code.rs  ruff_reader.rs
