[package]
name = "ruffly-all"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/AiyionPrime/ruffly-all"
license = "MIT"
authors = ["Burfeind, Jan-Niklas <jan-niklas.burfeind@sennheiser.com>"]
description = "Generating a migration path to ruff from anywhere"

[dependencies]
regex = "1.12.3"
