[package]
name = "ruffly-all"
version = "0.3.1"
edition = "2024"
repository = "https://github.com/AiyionPrime/ruffly-all"
license = "MIT"
authors = ["Burfeind, Jan-Niklas <jan-niklas.burfeind@sennheiser.com>"]
description = "Generate a migration path to ruff from anywhere."

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
