[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ruffly-all"
version = "0.6.1"
description = "Generate a migration path to ruff from anywhere."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.15.0",
]

[project.urls]
Repository = "https://github.com/AiyionPrime/ruffly-all.git"
Issues = "https://github.com/AiyionPrime/ruffly-all/issues"


[tool.maturin]
bindings = "bin"
